# OSTdata

./: .gitignore  README.md  analyze_exposure_type.py  data_directory_watchdog.py  db.sqlite3-journal  estimate_exposure_type_classic.py  fill_database.py  manage.py  pyproject.toml  renam_archive.sh  requirements.txt  utilities.py
adminops/: __init__.py  apps.py  audit_events.py  audit_log.py  models.py  redis_helpers.py  signals.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
keras_model/: multimodal_classifier_mixup_warmup_randaug_2.keras  multimodal_classifier_mixup_warmup_randaug_2_feat_scaler.npz
night/: admin.py  apps.py  auxil.py  forms.py  models.py  urls.py  views.py
objects/: models.py  search.py  solar_system_images.py  tests.py  urls.py  views.py
obs_run/: admin.py  analyze_files.py  analyze_fits_header.py  analyze_image_and_video_header.py  apps.py  aux_objects.py  auxil.py  datafile_filters.py  forms.py  ml_classification.py  models.py  plate_solving.py  plotting.py  search.py  ser_parser.py  ser_thumbnails.py  simbad_rate_limit.py  tasks.py  urls.py  utils.py  views.py  wcs_utils.py
ostdata/: .env.example  __init__.py  asgi.py  celery.py  custom_permissions.py  decorators.py  exception_handlers.py  history_reason.py  permissions.py  settings.py  settings_base.py  settings_development.py  settings_production.py  urls.py  wsgi.py
site_static/: base.css  datatables.css
tags/: models.py  urls.py  views.py
templates/: base.html  datatables.html  documentation.html  landing.html
users/: admin.py  models.py  (+1 more)
(+148 files in other folders)
