[project]
name = "ostdata"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["ostdata_env", "node_modules", "frontend/dist", "old", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
